# Gradebook

./: README.md  io.github.leolost2605.gradebook.json  io.github.leolost2605.gradebook.yml  meson.build  test
.flatpak-builder/cache/refs/heads/x86_64-io.github.leolost2605.gradebook.json/: init
.flatpak-builder/checksums/: x86_64-io.github.leolost2605.gradebook.json  x86_64-io.github.leolost2605.gradebook.yml
.github/workflows/: main.yml
data/: com.github.leolosttt.hello_gtk_vala.gschema.xml  io.github.leolost2605.gradebook.desktop  io.github.leolost2605.gradebook.metainfo.xml  io.github.leolost2605.gradebook.metainfo.xml.in
po/: LINGUAS  POTFILES  de.po  es.po  io.github.leolost2605.gradebook.pot  it.po  meson.build  nl.po  ru.po  tr.po  valapp.pot
src/: add-category-dialog.vala  app  application  application.vala  category.vala  delete-subject-button.vala  deletebutton.vala  edit-subject-button.vala  edit-subject-dialog.vala  grade.vala  new-grade-dialog.vala  new-subject-dialog.vala  newgradebutton.vala  subject-manager.vala  subject-page.vala  subject-parser.vala  subject.vala  window.vala
